--- a/app/src/main/res/layout/registered_beacon_list.xml
+++ b/app/src/main/res/layout/registered_beacon_list.xml
@@ -6,18 +6,34 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/list_view"
         android:layout_centerHorizontal="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_margin="@dimen/standard_margin"/>
 
-    <TextView android:id="@+id/empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/no_item"/>
+    <android.support.v7.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView android:id="@+id/empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_item"
+            android:layout_margin="@dimen/standard_margin"/>
+
+        <Button
+            android:id="@+id/retry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/retry_label"
+            android:layout_margin="@dimen/standard_margin"/>
+
+    </android.support.v7.widget.LinearLayoutCompat>
+
 
 </android.support.constraint.ConstraintLayout>
