--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="section_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="standard_margin">16dp</dimen>
 </resources>
