--- a/app/src/main/res/layout/beacon_tag_activity.xml
+++ b/app/src/main/res/layout/beacon_tag_activity.xml
@@ -5,29 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.v7.widget.LinearLayoutCompat
       android:id="@+id/beacon_list_container"
       android:layout_width="match_parent"
-      android:layout_height="match_parent">
+      android:layout_height="match_parent"
+      android:orientation="vertical">
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="0"
             android:id="@+id/list_view"
             android:layout_centerHorizontal="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_margin="@dimen/standard_margin"/>
+            android:layout_margin="@dimen/standard_margin"
+            android:focusable="true"/>
 
         <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1"
+            android:gravity="center|bottom"
             android:orientation="vertical">
             <TextView android:id="@+id/empty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/no_item"
+                android:layout_gravity="center_horizontal|center"
                 android:layout_margin="@dimen/standard_margin"/>
 
             <Button
@@ -35,10 +41,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/retry_label"
+                android:layout_gravity="center_horizontal|center"
                 android:layout_margin="@dimen/standard_margin"/>
 
         </android.support.v7.widget.LinearLayoutCompat>
-    </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.LinearLayoutCompat>
 
     <android.support.constraint.ConstraintLayout
       android:id="@+id/beacon_map_container"
