--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -5,4 +5,5 @@
     <dimen name="section_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="standard_margin">16dp</dimen>
+    <dimen name="small_margin">4dp</dimen>
 </resources>
