refs #11 Notify customer when a Tag found  - Customers can report lost eTags and also mark them as found(Manually)  as of this revision. Note: When eTag is seen by owner's phone then we can mark that eTag as found automatically.

--- a/app/src/main/res/layout/beacon_tag_list_item.xml
+++ b/app/src/main/res/layout/beacon_tag_list_item.xml
@@ -18,7 +18,8 @@
       android:textSize="16sp"
       android:textStyle="bold"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"/>
+      android:layout_height="wrap_content"
+      android:paddingStart="@dimen/small_padding"/>
 
   </LinearLayout>
 
@@ -31,6 +32,14 @@
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:layout_weight="1" />
+
+    <ImageButton android:id="@+id/missing_button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_margin="@dimen/small_margin"
+      android:focusable="false"
+      android:padding="10dp"
+      android:scaleType="fitCenter"/>
 
     <ImageButton android:id="@+id/edit_button"
       android:layout_width="wrap_content"
