--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/my_tags"
+        android:textAllCaps="false"
         android:onClick="goToBeaconListActivity"
         android:drawableTop="@drawable/ic_my_tags_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
