--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorSecondary">#a4c639</color>
+    <color name="colorDanger">#c65b39</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorDefault">#d3d3d3</color>
 </resources>
