--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,4 +6,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="standard_margin">16dp</dimen>
     <dimen name="small_margin">4dp</dimen>
+    <dimen name="small_padding">4dp</dimen>
 </resources>
