--- a/app/src/main/res/layout/beacon_tag_activity.xml
+++ b/app/src/main/res/layout/beacon_tag_activity.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0"
-            android:id="@+id/list_view"
+            android:id="@+id/tag_list"
             android:layout_centerHorizontal="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
@@ -29,21 +29,12 @@
             android:layout_weight="1"
             android:gravity="center|bottom"
             android:orientation="vertical">
-            <TextView android:id="@+id/empty"
+            <TextView android:id="@+id/empty_tag_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/no_item"
                 android:layout_gravity="center_horizontal|center"
                 android:layout_margin="@dimen/standard_margin"/>
-
-            <Button
-                android:id="@+id/retry"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/retry_label"
-                android:layout_gravity="center_horizontal|center"
-                android:layout_margin="@dimen/standard_margin"/>
-
         </android.support.v7.widget.LinearLayoutCompat>
     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -61,8 +52,41 @@
           android:layout_alignParentBottom="true"
           android:layout_alignParentRight="true"
           android:layout_alignParentTop="true"
-          android:layout_margin="@dimen/standard_margin"/>
+          android:layout_marginBottom="?android:attr/actionBarSize"/>
     </android.support.constraint.ConstraintLayout>
+
+    <android.support.v7.widget.LinearLayoutCompat
+      android:id="@+id/notification_container"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+        <ListView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_weight="0"
+          android:id="@+id/note_list"
+          android:layout_centerHorizontal="true"
+          android:layout_alignParentLeft="true"
+          android:layout_alignParentBottom="true"
+          android:layout_alignParentRight="true"
+          android:layout_alignParentTop="true"
+          android:layout_margin="@dimen/standard_margin"/>
+
+        <android.support.v7.widget.LinearLayoutCompat
+          android:layout_width="match_parent"
+          android:layout_height="0dip"
+          android:layout_weight="1"
+          android:gravity="center|bottom"
+          android:orientation="vertical">
+            <TextView android:id="@+id/empty_note_message"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="@string/no_item"
+              android:layout_gravity="center_horizontal|center"
+              android:layout_margin="@dimen/standard_margin"/>
+
+        </android.support.v7.widget.LinearLayoutCompat>
+    </android.support.v7.widget.LinearLayoutCompat>
 
     <android.support.design.widget.BottomNavigationView
       android:id="@+id/navigation"
