--- a/app/src/main/res/menu/beacon_tag_menu.xml
+++ b/app/src/main/res/menu/beacon_tag_menu.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
-    android:id="@+id/navigation_beacon_list"
+    android:id="@+id/navigation_tag"
     android:icon="@drawable/ic_my_tags_black_24dp"
     android:title="@string/my_tags" />
 
   <item
-    android:id="@+id/navigation_beacon_map"
-    android:icon="@drawable/ic_mappin_black_24dp"
+    android:id="@+id/navigation_map"
+    android:icon="@drawable/ic_map_pin_black_24dp"
     android:title="@string/tag_locations" />
 
   <item
-    android:id="@+id/navigation_notifications"
+    android:id="@+id/navigation_note"
     android:icon="@drawable/ic_notifications_black_24dp"
     android:title="@string/tag_notifications" />
 
