--- a/app/src/main/res/layout/found_notification_list_item.xml
+++ b/app/src/main/res/layout/found_notification_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:descendantFocusability="blocksDescendants"
@@ -12,9 +13,11 @@
     android:orientation="horizontal">
 
     <ImageButton android:id="@+id/icon1"
+      android:contentDescription="tag icon"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:focusable="false"/>
+      android:focusable="false"
+      tools:ignore="HardcodedText"/>
 
     <TextView android:id="@+id/text1"
       android:textSize="16sp"
@@ -22,12 +25,14 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@color/colorSecondary"
-      android:paddingStart="@dimen/small_padding"/>
+      android:paddingStart="@dimen/small_padding"
+      android:paddingEnd="@dimen/small_padding"/>
 
     <TextView android:id="@+id/note_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:paddingStart="@dimen/small_padding"/>
+      android:paddingStart="@dimen/small_padding"
+      android:paddingEnd="@dimen/small_padding"/>
 
   </LinearLayout>
 
@@ -42,6 +47,7 @@
       android:layout_weight="1" />
 
     <ImageButton android:id="@+id/show_in_the_map"
+      android:contentDescription="show in the map"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_margin"
@@ -49,7 +55,8 @@
       android:padding="10dp"
       app:srcCompat="@drawable/ic_map_pin_blue_24dp"
       android:background="@drawable/border_primary"
-      android:scaleType="fitCenter"/>
+      android:scaleType="fitCenter"
+      tools:ignore="HardcodedText"/>
 
   </LinearLayout>
 
