--- a/app/src/main/res/layout/beacon_tag_activity.xml
+++ b/app/src/main/res/layout/beacon_tag_activity.xml
@@ -16,9 +16,9 @@
             android:layout_weight="0"
             android:id="@+id/tag_list"
             android:layout_centerHorizontal="true"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
             android:layout_margin="@dimen/standard_margin"
             android:focusable="true"/>
@@ -48,9 +48,9 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_centerHorizontal="true"
-          android:layout_alignParentLeft="true"
+          android:layout_alignParentStart="true"
           android:layout_alignParentBottom="true"
-          android:layout_alignParentRight="true"
+          android:layout_alignParentEnd="true"
           android:layout_alignParentTop="true"
           android:layout_marginBottom="?android:attr/actionBarSize"/>
     </android.support.constraint.ConstraintLayout>
@@ -66,9 +66,9 @@
           android:layout_weight="0"
           android:id="@+id/note_list"
           android:layout_centerHorizontal="true"
-          android:layout_alignParentLeft="true"
+          android:layout_alignParentStart="true"
           android:layout_alignParentBottom="true"
-          android:layout_alignParentRight="true"
+          android:layout_alignParentEnd="true"
           android:layout_alignParentTop="true"
           android:layout_margin="@dimen/standard_margin"/>
 
