--- a/app/src/main/res/layout/beacon_tag_list_item.xml
+++ b/app/src/main/res/layout/beacon_tag_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical">
@@ -10,16 +11,19 @@
     android:orientation="horizontal">
 
     <ImageButton android:id="@+id/icon1"
+      android:contentDescription="tag icon"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:focusable="false"/>
+      android:focusable="false"
+      tools:ignore="HardcodedText"/>
 
     <TextView android:id="@+id/text1"
       android:textSize="16sp"
       android:textStyle="bold"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:paddingStart="@dimen/small_padding"/>
+      android:paddingStart="@dimen/small_padding"
+      android:paddingEnd="@dimen/small_padding"/>
 
   </LinearLayout>
 
@@ -34,29 +38,35 @@
       android:layout_weight="1" />
 
     <ImageButton android:id="@+id/missing_button"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_margin="@dimen/small_margin"
-      android:focusable="false"
-      android:padding="10dp"
-      android:scaleType="fitCenter"/>
-
-    <ImageButton android:id="@+id/edit_button"
+      android:contentDescription="missing button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_margin"
       android:focusable="false"
       android:padding="10dp"
       android:scaleType="fitCenter"
+      tools:ignore="HardcodedText"/>
+
+    <ImageButton android:id="@+id/edit_button"
+      android:contentDescription="edit button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_margin="@dimen/small_margin"
+      android:focusable="false"
+      android:padding="10dp"
+      android:scaleType="fitCenter"
+      tools:ignore="HardcodedText"
       />
 
     <ImageButton android:id="@+id/meter_button"
+      android:contentDescription="meter button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/small_margin"
       android:focusable="false"
       android:padding="10dp"
       android:scaleType="fitCenter"
+      tools:ignore="HardcodedText"
       />
 
   </LinearLayout>
