--- a/app/src/main/res/layout/discovery_beacon_list.xml
+++ b/app/src/main/res/layout/discovery_beacon_list.xml
@@ -10,10 +10,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/list_view"
         android:clickable="true"
+        android:focusable="true"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true" />
 
 
